--- a/Phase 1/Supplemental_Material/Python_Loops_and_Functions_blank.ipynb
+++ b/Phase 1/Supplemental_Material/Python_Loops_and_Functions_blank.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,11 +69,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I need to buy: cheese\n",
+      "I need to buy: whole milk\n",
+      "I need to buy: kefir\n",
+      "I need to buy: tofu four-pack\n",
+      "I need to buy: kale\n",
+      "I need to buy: oranges\n",
+      "I need to buy: ham\n",
+      "I need to buy: ben & jerry's\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your for loop\n"
+    "# Write your for loop\n",
+    "for item in items:\n",
+    "    print(\"I need to buy: \" + item)"
    ]
   },
   {
@@ -87,21 +104,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace None with appropriate code to create your dictionary\n",
-    "grocery_dict = None"
+    "grocery_dict = dict(zip(items, cost))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cheese': 2.79,\n",
+       " 'whole milk': 3.42,\n",
+       " 'kefir': 4.5,\n",
+       " 'tofu four-pack': 12.0,\n",
+       " 'kale': 2.75,\n",
+       " 'oranges': 3.64,\n",
+       " 'ham': 25.0,\n",
+       " \"ben & jerry's\": 5.29}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check your work\n",
     "grocery_dict"
@@ -118,13 +153,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.39"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate your sum\n"
+    "# Calculate your sum\n",
+    "sum(grocery_dict.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.39"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(cost)"
    ]
   },
   {
@@ -140,22 +209,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Code here to only add items to our total if they're <$10\n"
+    "# Code here to only add items to our total if they're <$10\n",
+    "cheap_items = []\n",
+    "for item, price in grocery_dict.items():\n",
+    "    if price < 10:\n",
+    "        cheap_items.append(item)\n",
+    "    else:\n",
+    "        pass\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cheese', 'whole milk', 'kefir', 'kale', 'oranges', \"ben & jerry's\"]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check your work\n"
+    "# Check your work\n",
+    "cheap_items"
    ]
   },
   {
@@ -203,17 +291,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You may want to paste your previous for loop here\n",
-    "# I always find it's easier to build a function from code outside a function!\n"
+    "# I always find it's easier to build a function from code outside a function!\n",
+    "def budget_list(dictionary):\n",
+    "    cheap_items = []\n",
+    "    for item, price in dictionary:\n",
+    "        if price < 10:\n",
+    "            cheap_list.append(items)\n",
+    "        else:\n",
+    "            pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,14 +321,28 @@
     "    Input: dictionary (expects key is item name, value is item cost)\n",
     "    Output: sum (float)\n",
     "    '''\n",
-    "    pass"
+    "    return sum(budget_list(dictionary))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[38], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Run this cell without changes to check your work\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mcalc_frugal_total\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrocery_dict\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[37], line 10\u001b[0m, in \u001b[0;36mcalc_frugal_total\u001b[0;34m(dictionary)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalc_frugal_total\u001b[39m(dictionary):\n\u001b[1;32m      3\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m    Returns a frugal grocery list sum, that only includes items that cost less\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;03m    than $10\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m    Output: sum (float)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m(\u001b[43mbudget_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdictionary\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[0;32mIn[36], line 5\u001b[0m, in \u001b[0;36mbudget_list\u001b[0;34m(dictionary)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbudget_list\u001b[39m(dictionary):\n\u001b[1;32m      4\u001b[0m     cheap_items \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m item, price \u001b[38;5;129;01min\u001b[39;00m dictionary:\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m price \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m10\u001b[39m:\n\u001b[1;32m      7\u001b[0m             cheap_list\u001b[38;5;241m.\u001b[39mappend(items)\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell without changes to check your work\n",
     "calc_frugal_total(grocery_dict)"
@@ -364,7 +473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -378,9 +487,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
