--- a/Phase 1/Supplemental_Material/Python_Loops_and_Functions_blank.ipynb
+++ b/Phase 1/Supplemental_Material/Python_Loops_and_Functions_blank.ipynb
@@ -209,7 +209,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('cheese', 2.79), ('whole milk', 3.42), ('kefir', 4.5), ('tofu four-pack', 12.0), ('kale', 2.75), ('oranges', 3.64), ('ham', 25.0), (\"ben & jerry's\", 5.29)])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grocery_dict.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -227,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +256,7 @@
        "['cheese', 'whole milk', 'kefir', 'kale', 'oranges', \"ben & jerry's\"]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
