--- a/Phase 1/Completed_Lectures/11_Pandas_DataCleaning_Completed.ipynb
+++ b/Phase 1/Completed_Lectures/11_Pandas_DataCleaning_Completed.ipynb
@@ -77,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1074,9 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2371,9 +2367,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3689,8 +3683,7 @@
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -3753,8 +3746,7 @@
    "cell_type": "code",
    "execution_count": 106,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -4183,8 +4175,7 @@
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -4803,7 +4794,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -4817,7 +4808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
