--- a/Phase 1/Completed_Lectures/14_P1_CodeChallenge_Review_Completed.ipynb
+++ b/Phase 1/Completed_Lectures/14_P1_CodeChallenge_Review_Completed.ipynb
@@ -2026,9 +2026,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3079,9 +3077,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3699,9 +3695,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3721,9 +3715,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4472,9 +4464,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -12110,9 +12100,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -12348,7 +12336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -12362,7 +12350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
