--- a/Phase 1/Completed_Lectures/12_Aggregating_Combining_Dataframes_Combined.ipynb
+++ b/Phase 1/Completed_Lectures/12_Aggregating_Combining_Dataframes_Combined.ipynb
@@ -740,8 +740,7 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -952,8 +951,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1903,8 +1901,7 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -4012,9 +4009,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
@@ -7744,9 +7739,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8540,8 +8533,7 @@
    "cell_type": "code",
    "execution_count": 125,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -9209,7 +9201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -9223,7 +9215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -9245,5 +9237,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
