--- a/Phase 2/Lectures/05_Distributions_Sampling.ipynb
+++ b/Phase 2/Lectures/05_Distributions_Sampling.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T20:59:55.423713Z",
@@ -780,9 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# visualize it\n",
@@ -2038,7 +2036,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -2052,7 +2050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
