--- a/Phase 2/Supplemental/Probability_Problems.ipynb
+++ b/Phase 2/Supplemental/Probability_Problems.ipynb
@@ -89,10 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p_true_neg = .99\n",
+    "p_true_pos = .995\n",
+    "p_false_pos = .005\n",
+    "p_false_neg = .001\n",
+    "p_pop_has_dis = .02\n",
+    "p_pop_not_dis = .98"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +110,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0199"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_pos_test = (p_pop_has_dis * p_true_pos)\n",
+    "p_pos_test"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,10 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.990025"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_pos_test_has_dis = p_pos_test / p_pop_has_dis\n",
+    "p_pos_test_has_dis"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,10 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p_1_r = .1\n",
+    "p_1_g = .5\n",
+    "p_1_b = .4\n",
+    "p_2_r = .1\n",
+    "p_2_g = .6\n",
+    "p_2_b = .3\n",
+    "p_1 = .5\n",
+    "p_2 = .5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +198,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.010000000000000002, 0.3, 0.12)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_r = p_1_r * p_2_r\n",
+    "p_g = p_1_g * p_2_g\n",
+    "p_b = p_1_b * p_2_b\n",
+    "p_r, p_g, p_b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,9 +307,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)",
    "language": "python",
-   "name": "learn-env"
+   "name": "learn-env-test"
   },
   "language_info": {
    "codemirror_mode": {
@@ -261,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
