--- a/Phase 2/Completed_Lectures/04_Probability_and_Bayes_completed.ipynb
+++ b/Phase 2/Completed_Lectures/04_Probability_and_Bayes_completed.ipynb
@@ -1694,7 +1694,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -1708,9 +1708,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
