--- a/Phase 2/Completed_Lectures/01_SQL_Queries_completed.ipynb
+++ b/Phase 2/Completed_Lectures/01_SQL_Queries_completed.ipynb
@@ -13623,7 +13623,6 @@
    "execution_count": 14,
    "metadata": {
     "hidden": true,
-    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -14001,8 +14000,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -17266,7 +17264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -17280,7 +17278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -17302,5 +17300,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
