--- a/Phase 2/Completed_Lectures/02_SQL_Joins_completed.ipynb
+++ b/Phase 2/Completed_Lectures/02_SQL_Joins_completed.ipynb
@@ -2449,8 +2449,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -4338,9 +4337,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5358,7 +5355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -5372,7 +5369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
