--- a/Phase 2/Completed_Lectures/06_ConstructingConfidenceInterval_completed.ipynb
+++ b/Phase 2/Completed_Lectures/06_ConstructingConfidenceInterval_completed.ipynb
@@ -2309,7 +2309,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -2323,7 +2323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -2373,5 +2373,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
