--- a/Phase 2/Completed_Lectures/01_SQL_Queries_completed.ipynb
+++ b/Phase 2/Completed_Lectures/01_SQL_Queries_completed.ipynb
@@ -14034,9 +14034,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -14146,8 +14144,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "hidden": true,
-    "scrolled": true
+    "hidden": true
    },
    "outputs": [
     {
