--- a/Phase 2/Completed_Lectures/03_SQL_Subqueries_completed.ipynb
+++ b/Phase 2/Completed_Lectures/03_SQL_Subqueries_completed.ipynb
@@ -1151,8 +1151,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -1315,8 +1314,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -2095,9 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2620,7 +2616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -2634,7 +2630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -2656,5 +2652,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
