--- a/Phase 3/Completed_Lectures/18_Model_Tuning_completed.ipynb
+++ b/Phase 3/Completed_Lectures/18_Model_Tuning_completed.ipynb
@@ -4324,8 +4324,7 @@
      "end_time": "2021-10-28T03:34:17.390365Z",
      "start_time": "2021-10-28T03:34:17.386703Z"
     },
-    "hidden": true,
-    "scrolled": true
+    "hidden": true
    },
    "outputs": [
     {
@@ -5684,7 +5683,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -5698,7 +5697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
