--- a/Phase 2/Completed_Lectures/06_NormalDistributions_completed.ipynb
+++ b/Phase 2/Completed_Lectures/06_NormalDistributions_completed.ipynb
@@ -235,8 +235,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -3051,9 +3050,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3087,7 +3084,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -3101,7 +3098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
