--- a/Phase 3/Completed_Lectures/14_Workflow_Pipelines_completed.ipynb
+++ b/Phase 3/Completed_Lectures/14_Workflow_Pipelines_completed.ipynb
@@ -753,8 +753,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -1047,8 +1046,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -3295,8 +3293,7 @@
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -4142,9 +4139,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4478,7 +4473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -4492,7 +4487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
