--- a/Phase 3/Completed_Lectures/15_Decision_Tree_Models_completed.ipynb
+++ b/Phase 3/Completed_Lectures/15_Decision_Tree_Models_completed.ipynb
@@ -1155,8 +1155,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -1300,9 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1555,7 +1552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -1569,7 +1566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
