--- a/Phase 3/Lectures/05_OOP_SKLearn.ipynb
+++ b/Phase 3/Lectures/05_OOP_SKLearn.ipynb
@@ -1189,9 +1189,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)",
    "language": "python",
-   "name": "learn-env"
+   "name": "learn-env-test"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1203,7 +1203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
