--- a/Phase 3/Lectures/07_Inference_vs_Prediction.ipynb
+++ b/Phase 3/Lectures/07_Inference_vs_Prediction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "hidden": true
    },
@@ -452,8 +452,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -604,9 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lr.predict(X)"
@@ -798,9 +795,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)",
    "language": "python",
-   "name": "learn-env"
+   "name": "learn-env-test"
   },
   "language_info": {
    "codemirror_mode": {
@@ -812,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
