--- a/Phase 4/06_Recommendations_Surprise.ipynb
+++ b/Phase 4/06_Recommendations_Surprise.ipynb
@@ -300,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python (learn-env-test)”\n",
    "language": "python",
    "name": "learn-env"
   },
@@ -314,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
